--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start_instance_queue": "docker run -d --hostname create_inst_rabbit --name inst_rabbit rabbitmq:3"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^2.5.1"
