--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start_instance_queue": "docker run -d --hostname create_inst_rabbit --name inst_rabbit rabbitmq:3"
+    "dev:start_instance_queue": "docker run -d --hostname create_inst_rabbit --name inst_rabbit -p 5672:5672 -p 15672:15672 rabbitmq:3-management"
   },
   "keywords": [],
   "author": "",
