--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.5.0",
     "jwks-rsa": "^3.0.1",
-    "knex": "^2.5.1"
+    "knex": "^2.5.1",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "sqlite3": "^5.1.6"
