Add start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start: "node index.js",
     "dev:start_instance_queue": "docker run -d --hostname create_inst_rabbit --name inst_rabbit -p 10001:5672 -p 10002:15672 rabbitmq:3-management"
   },
   "keywords": [],
