--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
-    "sqlite3": "^5.1.6"
+    "jest": "^29.7.0",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3"
   }
 }
