--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-mock": "^29.7.0",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
   },
