--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest-mock": "^29.7.0",
     "mocha": "^10.2.0",
     "regenerator-runtime": "^0.14.1",
+    "sinon": "^17.0.1",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
   },
