--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: img/base:2022.05
+      - image: cimg/base:2022.05
     steps:
       - run: npm install --legacy-peer-deps
 
