--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,18 @@
 version: 2.1
 
 jobs:
-  build:
+  build_and_test:
     docker:
       - image: cimg/node:18.19.0
     steps:
       - checkout
       - run: npm install --legacy-peer-deps
+      - run: npm test
 
 workflows:
   build_test_deploy:
     jobs:
-      - build:
+      - build_and_test:
         filters:
           branches:
             only: main
