Branch name as list

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,5 @@ workflows:
       - build_and_test:
         filters:
           branches:
-            only: main
+            only:
+              - main
