--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs:
       - checkout
       - run: npm install --legacy-peer-deps
       - run: npm test
-      - run: echo branch=${CIRCLECI_BRANCH}
 
 workflows:
   build_test_deploy:
@@ -17,4 +16,4 @@ workflows:
         filters:
           branches:
             only:
-              - /^main.*/
+              - /.*main.*/
