--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,6 @@ workflows:
   build_test_deploy:
     jobs:
       - build_and_test:
-        filters:
-          branches:
-            only:
-              - /.*main.*/
+          filters:
+            branches:
+              only: /^main/
