--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - setup_remote_docker:
+      - setup_remote_docker
       - aws-ecr/build-and-push-image:
           dockerfile: Dockerfile
           repo: clmsg-backend
