--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           dockerfile: Dockerfile
           auth:
             - aws-cli/setup:
-                aws_access_key_idid: ${AWS_ACCESS_KEY_ID}
+                aws_access_key_id: ${AWS_ACCESS_KEY_ID}
                 region: ${AWS_REGION}
           repo: clmsg-backend
           tag: "0.1"
